# barch

./: .gitignore  .gitmodules  .travis.yml  ADD.md  CMakeLists.txt  Dockerfile  GET.md  KEYS.md  LICENSE-MIT  README.md  RELEASES.md  REM.md  RUNPY.md  RUNVALKEY.md  SET.MD  SET.md  SWIG.md  USECASE.md  dump.rdb  generate_badge.sh
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: ubuntu20.yml  ubuntu22-sanitize.yml  ubuntu22.yml  ubuntu24-sanitize.yml  ubuntu24.yml
barchj/: .gitignore  README.md
barchj/src/main/java/org/barchtest/: Main.java
benchmarks/: index.html
ci/: script.sh
cmake/: FindLuaJIT.cmake  coverage.cmake
docker/: barch.service  start.sh
docker/valkey/: valkey.conf
docs/: ACL.md  ADD.md  APIS.md  BENCHMARKS.md  COMPRESSION.md  CONFIGURATION.md  COVERAGE.md  DOCKER.md  GET.md  PYTHONSERVEREXAMPLE.md  REM.md  USECASE.md  ZFASTRANK.md
examples/: README.md
examples/certs/: generate_self_signed_certs.sh
examples/flask/: README.md  client.py  example.py  geo.py  overture.py  post_points_to_server.py  server.py
examples/java/barchj/: README.md  pom.xml
examples/java/barchj/src/main/java/org/barchtest/: Main.java  RandomStrings.java
examples/luajit/: README.md  test.lua
examples/openresty/: README.md
examples/openresty/posts/conf/: nginx.conf
examples/python/: dbenchy.py  hints.py  zbenchy.py  zread.py
src/: abstract_shard.cpp  abstract_shard.h  art.cpp  art.h  artval.c  asio_includes.h  asio_resp_session.h  auth_api.cpp  auth_api.h  barch.cpp  barch.i  barch_apis.cpp  barch_apis.h  barch_functions.cpp  barch_functions.h  caller.h  cdict.cpp  circular_queue.h  composite.h  compress.cpp  compress.h  compressed_address.h  configuration.cpp  configuration.h  constants.h  conversion.cpp  conversion.h  counted_locks.h  dictionary_compressor.cpp  dictionary_compressor.h  double_hash.h  glob.cpp  glob.h  hash_api.cpp  hash_api.h  hash_arena.cpp  hash_arena.h  info_api.cpp  info_api.h  ioutil.h  (+73 more)
src/art/: art.cpp  art.h  iterator.h  key_options.h  node_content.h  node_impl.cpp  nodes.h
src/java/: Loader.java
src/python/: setup.py.in
src/rpc/: abstract_session.h  asio_includes.h  asio_resp_session.cpp  asio_resp_session.h  barch_functions.cpp  barch_functions.h  barch_parser.h  barch_rpc.h  barch_session.h  block_api.h  constants.h  netstat.h  proto_info.cpp  proto_info.h  redis_parser.cpp  redis_parser.h  repl_session.h  restarter.h  server.cpp  server.h  source.h  uring_context.h  uring_resp_session.h
test/: CMakeLists.txt  benchy.lua  bstartest.py  compresstest.py  expiretest.py  largetest.py  listtest.py  lrutest.py  mergetest.py  pulldebug.py  pullsourcesstart.lua  pulltest.py  pybarch.py  redispytest.py  remotetest.py  repltest.py  routetest.py  scantest.py  smallsourcestart.lua  sourcestart.lua  spacethreadtest.py  startup.py  test.lua  test111111.lua  test123.lua  test_data.py  test_starter.cpp  testabc.lua  testbarch.py  testbicycle.lua  testbounds.lua  testcomposites.lua  testdouble.lua  testglob.lua  testgloblarge.lua  testheapsize.lua  testintarith.lua  testintegers.lua  testkeys.lua  testlru.lua  (+12 more)
test/Debug/: TestStarter
test/RelWithDebInfo/: TestStarter
test/data/test/: Earth.json  JWT.json  Json.json  aleph.json  bank.json  beth.json  fee.json  fresh.json  functional.json  hash.json  html.json  medical.json  pi.json  solar.json  store.json  surplus.json  system.json  ten.json  terrific.json  transaction.json  xml.json  zebra.json
test/data/train/: Earth.json  JWT.json  Json.json  aleph.json  bank.json  beth.json  fee.json  fresh.json  functional.json  hash.json  html.json  medical.json  pi.json  solar.json  store.json  system.json  ten.json  terrific.json  transaction.json  xml.json  zebra.json
tls/: gen-test-certs.sh  valkey.crt  valkey.dh  valkey.key
